2005-11-10  Timothy Hatcher  <timothy@apple.com>

	    Merges fixes from Ti-2005-009-branch to Safari-2-0-branch

    2005-11-04  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by darin.

        - Fixed <rdar://problem/4317701> *SecUpd: Tiger* PCRE heap overflow 
          in Safari JavaScriptCore

        * pcre/pcre.c:
        (read_repeat_counts): We now return an error for negative repeat counts
        in regular expressions. This matches Firefox exactly, and Win IE by 
        effect (Win IE doesn't return an error, but it does refuse to match 
        anything).

2005-11-04  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin.

        - Fixed <rdar://problem/4323773> REGRESSION (412.2-416.12): [[xxx]] 
          appears on page due to JS regexp with char > 255 (5597) 
          (tiddlywiki.com)

        Previously, we fixed a buffer overflow by returning an error when 
        compiling character classes with characters > 255. But that broke 
        the internet.

        Plan B here is to work around such classes, skipping single characters 
        > 255, skipping character ranges beginning > 255, and truncating 
        character ranges at 255. 

        I removed the early returns we added and the early returns in the 
        original library. Now, funky expressions compile normally, tweaked 
        by our special rules.

        I also merged the UTF8 and UTF16 checks for out of range characters. 
        I remember we kept them separate before because we were purist about 
        marking off our code changes inside UTF16 #ifdefs. Since this patch 
        applies equally to UTF8 and UTF16, we've already lost that innocence, 
        so why not have a little fun?

        * ChangeLog:
        * pcre/pcre.c:
        (compile_branch):
        * tests/mozilla/jsDriver.pl: Oh, by the way, I modified this to look 
        inside of $SYMROOTS/Development. Not perfect, but certainly better 